--- a/page7.html
+++ b/page7.html
@@ -118,7 +118,7 @@
       <div class="right">
         <img
           alt="Intro"
-          src="images/page7.png"
+          src="images/page7.jpg"
           style="width: 100%; height: 100%"
         />
         <div class="arrows-container">
