--- a/page8.html
+++ b/page8.html
@@ -117,7 +117,7 @@
 
       <div class="right">
         <img
-          alt="Intro"
+          alt="Page 8 image"
           src="images/page8.svg"
           style="width: 100%; height: 100%"
         />
