--- a/page6.html
+++ b/page6.html
@@ -118,7 +118,7 @@
       <div class="right">
         <img
           alt="Intro"
-          src="images/page6.png"
+          src="images/page6.svg"
           style="width: 100%; height: 100%"
         />
         <div class="arrows-container">
