--- a/page0.html
+++ b/page0.html
@@ -42,7 +42,7 @@
   </head>
 
   <body>
-    <img alt="Intro" src="images/page0.png" style="width: 100%; height: 100%" />
+    <img alt="Intro" src="images/page0.svg" style="width: 100%; height: 100%" />
     <a class="arrow-next-container" href="page1.html">
       <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
     </a>
