--- a/page1.html
+++ b/page1.html
@@ -49,7 +49,7 @@
   </head>
 
   <body>
-    <img alt="Intro" src="images/page1.png" style="width: 100%; height: 100%" />
+    <img alt="Intro" src="images/page1.svg" style="width: 100%; height: 100%" />
     <div class="right">
       <div class="arrows-container">
         <a class="arrow-next-container" href="page2.html">
