--- a/page2.html
+++ b/page2.html
@@ -118,7 +118,7 @@
       <div class="right">
         <img
           alt="Intro"
-          src="images/page2.png"
+          src="images/page2.svg"
           style="width: 100%; height: 100%"
         />
         <div class="arrows-container">
