--- a/page3.html
+++ b/page3.html
@@ -118,7 +118,7 @@
       <div class="right">
         <img
           alt="Intro"
-          src="images/page3.png"
+          src="images/page3.svg"
           style="width: 100%; height: 100%"
         />
         <div class="arrows-container">
