--- a/page5.html
+++ b/page5.html
@@ -118,7 +118,7 @@
       <div class="right">
         <img
           alt="Intro"
-          src="images/page5.png"
+          src="images/page5.svg"
           style="width: 100%; height: 100%"
         />
         <div class="arrows-container">
