--- a/page2.html
+++ b/page2.html
@@ -73,7 +73,7 @@
         width: 80%;
         height: 80%;
         z-index: 3;
-        margin-top: -16px;
+        margin-top: -18px;
       }
       #play_button img {
         width: 400px;
@@ -89,7 +89,7 @@
         width: 80%;
         height: 80%;
         z-index: 2;
-        margin-top: -16px;
+        margin-top: -18px;
       }
       .left-bg {
         z-index: 1;
@@ -106,7 +106,7 @@
     <div id="root">
       <div class="left">
         <img alt="Background image" src="images/left_bg.png" class="left-bg" />
-        <video controls autoplay width="100%" height="100%" id="video_player">
+        <video controls width="100%" height="100%" id="video_player">
           <source src="videos/page2.mp4" />
           Sorry, your browser doesn't support embedded videos.
         </video>
