--- a/page0.html
+++ b/page0.html
@@ -38,11 +38,86 @@
         width: 40px;
         height: 30px;
       }
+      .right {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 50%;
+        height: 100%;
+      }
+      .link {
+        height: 20px;
+      }
     </style>
   </head>
 
   <body>
     <img alt="Intro" src="images/page0.svg" style="width: 100%; height: 100%" />
+    <div class="right">
+      <a href="page1.html">
+        <img
+          alt="page 1"
+          src="images/links/1.svg"
+          style="margin-top: 100px; width: 62%; margin-left: 114px"
+        />
+      </a>
+      <a href="page2.html">
+        <img
+          alt="page 2"
+          src="images/links/2.svg"
+          style="margin-top: 53px; width: 62%; margin-left: 114px"
+        />
+      </a>
+      <a href="page3.html">
+        <img
+          alt="page 3"
+          src="images/links/3.svg"
+          style="margin-top: 14px; width: 62%; margin-left: 114px"
+        />
+      </a>
+      <a href="page4.html">
+        <img
+          alt="page 4"
+          src="images/links/4.svg"
+          style="margin-top: 95px; width: 62%; margin-left: 114px"
+        />
+      </a>
+      <a href="page5.html">
+        <img
+          alt="page 5"
+          src="images/links/5.svg"
+          style="margin-top: 17px; width: 62%; margin-left: 114px"
+        />
+      </a>
+      <a href="page6.html">
+        <img
+          alt="page 6"
+          src="images/links/6.svg"
+          style="margin-top: 15px; width: 62%; margin-left: 114px"
+        />
+      </a>
+      <a href="page7.html">
+        <img
+          alt="page 7"
+          src="images/links/7.svg"
+          style="margin-top: 96px; width: 62%; margin-left: 114px"
+        />
+      </a>
+      <a href="page8.html">
+        <img
+          alt="page 8"
+          src="images/links/8.svg"
+          style="margin-top: 15px; width: 62%; margin-left: 114px"
+        />
+      </a>
+      <a href="page9.html">
+        <img
+          alt="page 9"
+          src="images/links/9.svg"
+          style="margin-top: 20px; width: 62%; margin-left: 114px"
+        />
+      </a>
+    </div>
     <a class="arrow-next-container" href="page1.html">
       <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
     </a>
