--- a/page2.html
+++ b/page2.html
@@ -106,7 +106,7 @@
     <div id="root">
       <div class="left">
         <img alt="Background image" src="images/left_bg.png" class="left-bg" />
-        <video controls width="100%" height="100%" id="video_player">
+        <video controls autoplay width="100%" height="100%" id="video_player">
           <source src="videos/page2.mp4" />
           Sorry, your browser doesn't support embedded videos.
         </video>
