--- a/page2.html
+++ b/page2.html
@@ -68,7 +68,7 @@
         background: transparent;
         width: 100%;
         height: 100%;
-        background-color: #0000005c;
+        /* background-color: #0000005c; */
         outline: none;
         width: 80%;
         height: 80%;
