--- a/page1.html
+++ b/page1.html
@@ -45,6 +45,16 @@
         display: flex;
         align-items: center;
       }
+      .home {
+        position: fixed;
+        top: 40px;
+        left: 40px;
+        z-index: 1;
+      }
+      .home-image {
+        width: 30px;
+        height: 30px;
+      }
     </style>
   </head>
 
@@ -64,5 +74,8 @@
         </a>
       </div>
     </div>
+    <a href="page0.html" class="home">
+      <img src="images/home.gif" alt="Homepage" class="home-image" />
+    </a>
   </body>
 </html>
