--- a/page5.html
+++ b/page5.html
@@ -96,6 +96,16 @@
         top: 0;
         left: 0;
       }
+      .home {
+        position: fixed;
+        top: 40px;
+        left: 40px;
+        z-index: 1;
+      }
+      .home-image {
+        width: 30px;
+        height: 30px;
+      }
     </style>
   </head>
 
@@ -137,6 +147,10 @@
         </div>
       </div>
     </div>
+
+    <a href="page0.html" class="home">
+      <img src="images/home.gif" alt="Homepage" class="home-image" />
+    </a>
 
     <script>
       function docReady(fn) {
