--- a/page3.html
+++ b/page3.html
@@ -112,7 +112,7 @@
   <body>
     <div id="root">
       <div class="left">
-        <img alt="Background image" src="images/left_bg.png" class="left-bg" />
+        <img alt="Background image" src="images/left/3.svg" class="left-bg" />
         <video controls autoplay width="100%" height="100%" id="video_player">
           <source src="videos/page3.mp4" />
           Sorry, your browser doesn't support embedded videos.
