--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   <body>
     <div id="root">
       <img
-        alt="Intro"
-        src="images/intro.gif"
+        alt="Page 0"
+        src="images/page0.gif"
         style="width: 100%; height: 100%"
       />
-      <a class="clickable-panel" href="page0.html"></a>
+      <a class="clickable-panel" href="page1.html"></a>
     </div>
   </body>
 </html>
