--- a/page1.html
+++ b/page1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -41,17 +40,67 @@
       .home {
         position: absolute;
         top: 50px;
-        left: 60px;
+        left: 40px;
       }
       .home-image {
         width: 40px;
         height: 40px;
       }
+      .links {
+        position: absolute;
+        right: 0;
+        top: 130px;
+        width: 100%;
+        text-align: right;
+      }
+      .links img {
+        width: auto;
+        margin-right: 50px;
+      }
     </style>
   </head>
 
   <body>
-    <img alt="Page1" src="images/page1.svg" style="width: 100%; height: 100%" />
+    <img alt="Page1" src="images/page1.svg" />
+
+    <div class="links">
+      <a href="page2.html"
+        ><img src="images/links/1.svg" style="height: 25px"
+      /></a>
+      <a href="page3.html"
+        ><img src="images/links/2.svg" style="margin-top: 21px; height: 30px"
+      /></a>
+      <a href="page4.html"
+        ><img src="images/links/3.svg" style="margin-top: 20px; height: 30px"
+      /></a>
+      <a href="page5.html"
+        ><img src="images/links/4.svg" style="margin-top: 14px; height: 30px"
+      /></a>
+      <a href="page6.html"
+        ><img src="images/links/5.svg" style="margin-top: 17px; height: 30px"
+      /></a>
+      <a href="page7.html"
+        ><img src="images/links/6.svg" style="margin-top: 20px; height: 30px"
+      /></a>
+      <a href="page8.html"
+        ><img src="images/links/7.svg" style="margin-top: 20px; height: 30px"
+      /></a>
+      <a href="page9.html"
+        ><img src="images/links/8.svg" style="margin-top: 14px; height: 30px"
+      /></a>
+      <a href="page10.html"
+        ><img src="images/links/9.svg" style="margin-top: 19px; height: 30px"
+      /></a>
+      <a href="page10.html"
+        ><img src="images/links/10.svg" style="margin-top: 20px; height: 30px"
+      /></a>
+      <a href="page10.html"
+        ><img src="images/links/11.svg" style="margin-top: 17px; height: 30px"
+      /></a>
+      <a href="page10.html"
+        ><img src="images/links/12.svg" style="margin-top: 17px; height: 30px"
+      /></a>
+    </div>
 
     <div class="arrows-container">
       <a class="arrow-next-container" href="page2.html">
