--- a/page21.html
+++ b/page21.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +22,7 @@
       .arrow-next-image {
         width: 40px;
         height: 40px;
-        transform: rotate(180deg);
+        transform: rotateX(180deg);
       }
       .arrow-back-image {
         width: 40px;
@@ -41,7 +40,7 @@
       .home {
         position: absolute;
         top: 50px;
-        left: 60px;
+        left: 40px;
       }
       .home-image {
         width: 40px;
@@ -51,12 +50,17 @@
   </head>
 
   <body>
-    <img alt="Page1" src="images/page21.svg" style="width: 100%; height: 100%" />
+    <img
+      alt="Page1"
+      src="images/page21.svg"
+      style="width: 100%; height: 100%"
+    />
 
     <div class="arrows-container">
       <a class="arrow-next-container" href="page22.html">
-        <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
+        <img alt="Next page" class="arrow-next-image" src="images/reset.gif" />
       </a>
+
       <a class="arrow-back-container" href="page20.html">
         <img
           alt="Previous page"
