--- a/page3.html
+++ b/page3.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -41,7 +40,7 @@
       .home {
         position: absolute;
         top: 50px;
-        left: 60px;
+        left: 40px;
       }
       .home-image {
         width: 40px;
@@ -51,7 +50,7 @@
   </head>
 
   <body>
-    <img alt="Page1" src="images/page3.svg" style="width: 100%; height: 100%" />
+    <img alt="Page1" src="images/page3.svg" />
 
     <div class="arrows-container">
       <a class="arrow-next-container" href="page4.html">
