--- a/page6.html
+++ b/page6.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -47,11 +46,28 @@
         width: 40px;
         height: 40px;
       }
+      .content {
+        position: absolute;
+        bottom: 10%;
+        left: 0;
+        width: 100%;
+        height: 80%;
+      }
     </style>
   </head>
 
   <body>
     <img alt="Page1" src="images/page6.svg" style="width: 100%; height: 100%" />
+
+    <div class="content">
+      <video controls autoplay width="100%" height="100%" id="video_player">
+        <source src="videos/page2.mp4" />
+        Sorry, your browser doesn't support embedded videos.
+      </video>
+      <button id="play_button" onclick="startVideo()">
+        <img src="images/play_button.gif" alt="Play video" />
+      </button>
+    </div>
 
     <div class="arrows-container">
       <a class="arrow-next-container" href="page7.html">
