--- a/page6.html
+++ b/page6.html
@@ -64,9 +64,9 @@
         <source src="videos/page2.mp4" />
         Sorry, your browser doesn't support embedded videos.
       </video>
-      <button id="play_button" onclick="startVideo()">
+      <!-- <button id="play_button" onclick="startVideo()">
         <img src="images/play_button.gif" alt="Play video" />
-      </button>
+      </button> -->
     </div>
 
     <div class="arrows-container">
