Back to homepage

--- a/page1.html
+++ b/page1.html
@@ -106,7 +106,7 @@
       <a class="arrow-next-container" href="page2.html">
         <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
       </a>
-      <a class="arrow-back-container" href="page0.html">
+      <a class="arrow-back-container" href="index.html">
         <img
           alt="Previous page"
           class="arrow-back-image"
