--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
   <body>
     <div id="root">
-      <img src="images/page0.gif" alt="image" class="main-image" />
+      <!-- <img src="images/page0.gif" alt="image" class="main-image" /> -->
     </div>
 
     <script>
@@ -175,18 +175,20 @@
       }
       function main() {
         var rootElement = document.getElementById("root");
-        rootElement.style.display = "none";
-
         const viewportSize = getViewportSize();
-        var landscape = isLandscape(viewportSize);
-        if (landscape) {
-          const width = viewportSize.y * 0.75;
-          rootElement.style.width = width + "px";
-        } else {
-          const height = viewportSize.x / 0.75;
-          rootElement.style.height = height + "px";
-        }
-        rootElement.style.display = "block";
+        document.write(`x: ${viewportSize.x} y: ${viewportSize.y}`);
+        // rootElement.style.display = "none";
+
+        // const viewportSize = getViewportSize();
+        // var landscape = isLandscape(viewportSize);
+        // if (landscape) {
+        //   const width = viewportSize.y * 0.75;
+        //   rootElement.style.width = width + "px";
+        // } else {
+        //   const height = viewportSize.x / 0.75;
+        //   rootElement.style.height = height + "px";
+        // }
+        // rootElement.style.display = "block";
       }
 
       document.addEventListener("DOMContentLoaded", main, false);
