--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   </head>
 
   <body>
-    <div id="root">
+    <div id="root" style="width: 810px; height: 1010px">
       <!-- <img src="images/page0.gif" alt="image" class="main-image" /> -->
     </div>
 
@@ -176,7 +176,7 @@
       function main() {
         var rootElement = document.getElementById("root");
         const viewportSize = getViewportSize();
-        document.write(`x: ${viewportSize.x} y: ${viewportSize.y}`);
+        // document.write(`x: ${viewportSize.x} y: ${viewportSize.y}`);
         // rootElement.style.display = "none";
 
         // const viewportSize = getViewportSize();
