--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       id="log"
     ></div>
     <div id="root">
-      <img id="image" src="images/page0.gif" alt="image" />
+      <!-- <img id="image" src="images/page0.gif" alt="image" /> -->
     </div>
 
     <script>
@@ -200,12 +200,13 @@
           const width = viewportSize.y * 0.75;
           rootElement.style.width = width + "px";
           logElement.innerText += `Image x: ${width} y: auto`;
-          imageElement.classList.add("landscape-image");
+          // imageElement.classList.add("landscape-image");
         } else {
-          const height = viewportSize.x / 0.75;
+          const height = viewportSize.y * 0.75;
           rootElement.style.height = height + "px";
+          rootElement.style.width = height * 0.75 + "px";
           logElement.innerText += `Image x: auto y: ${height}`;
-          imageElement.classList.add("portrait-image");
+          // imageElement.classList.add("portrait-image");
         }
         rootElement.style.display = "block";
       }
