--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
       id="log"
     ></div>
     <div id="root">
-      <!-- <img id="image" src="images/page0.gif" alt="image" /> -->
+      <img
+        id="image"
+        src="images/page0.gif"
+        alt="image"
+        style="width: 100%; height: 100%"
+      />
     </div>
 
     <script>
