--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
         width: 100%;
       }
       #root {
-        background-color: blue;
         margin: auto;
         position: absolute;
         top: 0;
@@ -173,7 +172,8 @@
       "
       id="log"
     ></div>
-    <div id="root">
+
+    <div id="root" onclick="window.location.href = 'page1.html'">
       <img
         id="image"
         src="images/page0.gif"
