--- a/page1.html
+++ b/page1.html
@@ -137,6 +137,9 @@
       }
     </style>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       html,
       body {
         height: 100%;
