--- a/page3.html
+++ b/page3.html
@@ -207,7 +207,7 @@
     ></div>
 
     <div id="root">
-      
+      <img src="images/page3.svg" alt="image" style="width:100%;height: 100%;" />
       <div class="arrows-container">
         <a class="arrow-next-container" href="page4.html">
           <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
