--- a/page1.html
+++ b/page1.html
@@ -161,6 +161,18 @@
         width: auto;
         height: 100%;
       }
+      .links {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 2;
+        margin-top: 130px;
+        margin-right: 30px;
+        text-align: right;
+      }
+      .links a {
+        display: block;
+      }
     </style>
   </head>
 
@@ -176,8 +188,51 @@
       id="log"
     ></div>
 
-    <div id="root">
-      
+    <div id="root" >
+      <img
+        id="image"
+        src="images/page1.svg"
+        alt="image"
+        style="width: 100%; height: 100%;position: absolute; z-index: 1"
+      />
+      <div class="links" style="position: absolute;top:0;right: 0; z-index: 2">
+        <a href="page2.html"
+          ><img src="images/links/1.svg" style="height: 25px"
+        /></a>
+        <a href="page4.html"
+          ><img src="images/links/2.svg" style="margin-top: 21px; height: 30px"
+        /></a>
+        <a href="page5.html"
+          ><img src="images/links/3.svg" style="margin-top: 20px; height: 30px"
+        /></a>
+        <a href="page7.html"
+          ><img src="images/links/4.svg" style="margin-top: 14px; height: 30px"
+        /></a>
+        <a href="page9.html"
+          ><img src="images/links/5.svg" style="margin-top: 17px; height: 30px"
+        /></a>
+        <a href="page10.html"
+          ><img src="images/links/6.svg" style="margin-top: 20px; height: 30px"
+        /></a>
+        <a href="page12.html"
+          ><img src="images/links/7.svg" style="margin-top: 20px; height: 30px"
+        /></a>
+        <a href="page14.html"
+          ><img src="images/links/8.svg" style="margin-top: 14px; height: 30px"
+        /></a>
+        <a href="page16.html"
+          ><img src="images/links/9.svg" style="margin-top: 19px; height: 30px"
+        /></a>
+        <a href="page17.html"
+          ><img src="images/links/10.svg" style="margin-top: 20px; height: 30px"
+        /></a>
+        <a href="page19.html"
+          ><img src="images/links/11.svg" style="margin-top: 17px; height: 30px"
+        /></a>
+        <a href="page21.html"
+          ><img src="images/links/12.svg" style="margin-top: 17px; height: 30px"
+        /></a>
+      </div>
     </div>
 
     <script>
