--- a/page1.html
+++ b/page1.html
@@ -173,6 +173,38 @@
       .links a {
         display: block;
       }
+      .arrow-next-container {
+        margin-right: 30px;
+      }
+      .arrow-next-image {
+        width: 40px;
+        height: 40px;
+        transform: rotate(180deg);
+      }
+      .arrow-back-image {
+        width: 40px;
+        height: 40px;
+      }
+      .arrows-container {
+        width: 100%;
+        position: absolute;
+        bottom: 0px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 16px 30px;
+        z-index: 2;
+      }
+      .home {
+        position: absolute;
+        top: 50px;
+        left: 40px;
+        z-index: 2;
+      }
+      .home-image {
+        width: 40px;
+        height: 40px;
+      }
     </style>
   </head>
 
@@ -233,6 +265,22 @@
           ><img src="images/links/12.svg" style="margin-top: 17px; height: 30px"
         /></a>
       </div>
+      <div class="arrows-container">
+        <a class="arrow-next-container" href="page3.html">
+          <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
+        </a>
+        <a class="arrow-back-container" href="page1.html">
+          <img
+            alt="Previous page"
+            class="arrow-back-image"
+            src="images/next.gif"
+          />
+        </a>
+      </div>
+  
+      <a href="index.html" class="home">
+        <img src="images/home.gif" alt="Homepage" class="home-image" />
+      </a>
     </div>
 
     <script>
