--- a/page6.html
+++ b/page6.html
@@ -191,6 +191,27 @@
         width: 40px;
         height: 40px;
       }
+      #video_player {
+        z-index: 2;
+        position: absolute;
+        top: 10%;
+        left: 0;
+        height: 80%;
+      }
+      #play_button {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        z-index: 3;
+        border: none;
+        background: none;
+      }
+      #play_button img {
+        width: 100px;
+      }
     </style>
   </head>
 
@@ -202,6 +223,13 @@
         alt="image"
         style="width: 100%; height: 100%"
       />
+      <video controls autoplay width="100%" height="100%" id="video_player">
+        <source src="videos/page2.mp4" />
+        Sorry, your browser doesn't support embedded videos.
+      </video>
+      <button id="play_button" onclick="startVideo()">
+        <img src="images/play_button.gif" alt="Play video" />
+      </button>
       <div class="arrows-container">
         <a class="arrow-next-container" href="page7.html">
           <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
