--- a/page1.html
+++ b/page1.html
@@ -266,10 +266,10 @@
         /></a>
       </div>
       <div class="arrows-container">
-        <a class="arrow-next-container" href="page3.html">
+        <a class="arrow-next-container" href="page2.html">
           <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
         </a>
-        <a class="arrow-back-container" href="page1.html">
+        <a class="arrow-back-container" href="index.html">
           <img
             alt="Previous page"
             class="arrow-back-image"
