--- a/page2.html
+++ b/page2.html
@@ -168,10 +168,12 @@
         width: 40px;
         height: 40px;
         transform: rotate(180deg);
+        z-index: 9;
       }
       .arrow-back-image {
         width: 40px;
         height: 40px;
+        z-index: 9;
       }
       .arrows-container {
         width: 100%;
@@ -181,15 +183,18 @@
         align-items: center;
         justify-content: space-between;
         padding: 16px 30px;
+        z-index: 9;
       }
       .home {
         position: absolute;
         top: 50px;
         left: 40px;
+        z-index: 9;
       }
       .home-image {
         width: 40px;
         height: 40px;
+        z-index: 9;
       }
     </style>
   </head>
