--- a/page6.html
+++ b/page6.html
@@ -223,13 +223,13 @@
         alt="image"
         style="width: 100%; height: 100%"
       />
-      <video controls autoplay width="100%" height="100%" id="video_player">
+      <video controls autoplay playsinline width="100%" height="100%" id="video_player">
         <source src="videos/page2.mp4" />
         Sorry, your browser doesn't support embedded videos.
       </video>
-      <button id="play_button" onclick="startVideo()">
+      <!-- <button id="play_button" onclick="startVideo()">
         <img src="images/play_button.gif" alt="Play video" />
-      </button>
+      </button> -->
       <div class="arrows-container">
         <a class="arrow-next-container" href="page7.html">
           <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
