--- a/page11.html
+++ b/page11.html
@@ -191,6 +191,26 @@
         width: 40px;
         height: 40px;
       }
+      #video_player {
+        z-index: 2;
+        position: absolute;
+        top: 10%;
+        left: 0;
+        height: 80%;
+      }
+      #play_button {
+        position: absolute;
+        top: 20%;
+        left: 0;
+        right: 0;
+        margin: auto;
+        z-index: 3;
+        border: none;
+        background: none;
+      }
+      #play_button img {
+        width: 400px;
+      }
     </style>
   </head>
 
@@ -202,6 +222,15 @@
         alt="image"
         style="width: 100%; height: 100%"
       />
+
+      <video controls autoplay playsinline width="100%" height="100%" id="video_player">
+        <source src="videos/page4.mp4" />
+        Sorry, your browser doesn't support embedded videos.
+      </video>
+      <button id="play_button" onclick="startVideo()">
+        <img src="images/play_button.gif" alt="Play video" />
+      </button>
+
       <div class="arrows-container">
         <a class="arrow-next-container" href="page12.html">
           <img alt="Next page" class="arrow-next-image" src="images/next.gif" />
@@ -229,6 +258,10 @@
       }
       function isLandscape(viewportSize) {
         return viewportSize.x >= viewportSize.y;
+      }
+      function startVideo() {
+        document.getElementById('play_button').style.display = "none";
+        document.getElementById('video_player').play()
       }
       function main() {
         var rootElement = document.getElementById("root");
