--- a/page6.html
+++ b/page6.html
@@ -200,8 +200,7 @@
       }
       #play_button {
         position: absolute;
-        top: 0;
-        bottom: 0;
+        top: 20%;
         left: 0;
         right: 0;
         margin: auto;
