--- a/page11.html
+++ b/page11.html
@@ -223,7 +223,7 @@
         style="width: 100%; height: 100%"
       />
 
-      <video controls autoplay playsinline width="100%" height="100%" id="video_player">
+      <video controls width="100%" height="100%" id="video_player">
         <source src="videos/page4.mp4" />
         Sorry, your browser doesn't support embedded videos.
       </video>
