--- a/page13.html
+++ b/page13.html
@@ -223,7 +223,7 @@
         style="width: 100%; height: 100%"
       />
 
-      <video controls width="100%" height="100%" id="video_player">
+      <video autoplay controls width="100%" height="100%" id="video_player">
         <source src="videos/page5.mp4" />
         Sorry, your browser doesn't support embedded videos.
       </video>
