--- a/page6.html
+++ b/page6.html
@@ -222,7 +222,7 @@
         alt="image"
         style="width: 100%; height: 100%"
       />
-      <video controls width="100%" height="100%" id="video_player">
+      <video autoplay controls width="100%" height="100%" id="video_player">
         <source src="videos/page2.mp4" />
         Sorry, your browser doesn't support embedded videos.
       </video>
