--- a/test.html
+++ b/test.html
@@ -190,7 +190,7 @@
       </div>
       <div
         id="box"
-        style="display: none; background-image: url('images/page1.svg')"
+        style="display: none; background-image: url('images/page1_full.svg')"
       >
         <a
           class="link link1"
