--- a/test.html
+++ b/test.html
@@ -153,10 +153,8 @@
       .link {
         display: block;
         position: absolute;
-        opacity: 0.3;
         height: 3%;
         width: 56%;
-        background-color: red;
         z-index: 2;
         right: 20px;
       }
@@ -204,78 +202,18 @@
         id="box"
         style="display: none; background-image: url('images/page1_full.svg')"
       >
-        <a
-          class="link link2"
-          href="pag2.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link4"
-          href="page4.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link5"
-          href="page5.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link7"
-          href="page7.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link9"
-          href="page9.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link10"
-          href="page10.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link12"
-          href="page12.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link14"
-          href="page14.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link16"
-          href="page16.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link17"
-          href="page17.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link19"
-          href="page19.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
-        <a
-          class="link link21"
-          href="page21.html"
-          target="_blank"
-          rel="noreferrer"
-        ></a>
+        <a class="link link2" href="pag2.html"></a>
+        <a class="link link4" href="page4.html"></a>
+        <a class="link link5" href="page5.html"></a>
+        <a class="link link7" href="page7.html"></a>
+        <a class="link link9" href="page9.html"></a>
+        <a class="link link10" href="page10.html"></a>
+        <a class="link link12" href="page12.html"></a>
+        <a class="link link14" href="page14.html"></a>
+        <a class="link link16" href="page16.html"></a>
+        <a class="link link17" href="page17.html"></a>
+        <a class="link link19" href="page19.html"></a>
+        <a class="link link21" href="page21.html"></a>
       </div>
     </div>
     <script>
