--- a/test.html
+++ b/test.html
@@ -202,7 +202,7 @@
         id="box"
         style="display: none; background-image: url('images/page1_full.svg')"
       >
-        <a class="link link2" href="pag2.html"></a>
+        <a class="link link2" href="page2.html"></a>
         <a class="link link4" href="page4.html"></a>
         <a class="link link5" href="page5.html"></a>
         <a class="link link7" href="page7.html"></a>
