--- a/page1.html
+++ b/page1.html
@@ -239,7 +239,7 @@
     <div id="container">
       <div
         id="box"
-        style="display: none; background-image: url('images/page1.svg')"
+        style="display: none; background-image: url('images/page1_full.svg')"
       >
         <a class="link link2" href="page2.html"></a>
         <a class="link link4" href="page4.html"></a>
