--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
     <div id="container">
       <div
         id="box"
-        style="display: none; background-image: url('images/page0.gif')"
+        style="
+          display: none;
+          background-image: url('images/page0.gif');
+          background-size: cover;
+        "
       >
         <a
           href="page1.html"
