--- a/page18.html
+++ b/page18.html
@@ -213,7 +213,7 @@
         background: none;
         border: none;
         background-image: url(images/play_button.gif);
-        background-size: contain;
+        background-size: cover;
       }
     </style>
   </head>
