--- a/page6.html
+++ b/page6.html
@@ -223,7 +223,7 @@
         id="box"
         style="display: none; background-image: url('images/page6.svg')"
       >
-        <video controls width="100%" height="100%" id="video_player">
+        <video autoplay controls width="100%" height="100%" id="video_player">
           <source src="videos/page2.mp4" />
           Sorry, your browser doesn't support embedded videos.
         </video>
