--- a/index.html
+++ b/index.html
@@ -158,14 +158,8 @@
   </head>
   <body>
     <div id="container">
-      <div
-        id="box"
-        style="
-          display: none;
-          background-image: url('images/page0.gif');
-          background-size: cover;
-        "
-      >
+      <div id="box" style="display: none">
+        <img src="images/page0.gif" alt="MyHero" />
         <a
           href="page1.html"
           style="width: 100%; height: 100%; display: block"
