--- a/index.html
+++ b/index.html
@@ -159,7 +159,11 @@
   <body>
     <div id="container">
       <div id="box" style="display: none">
-        <img src="images/page0.gif" alt="MyHero" />
+        <img
+          src="images/page0.gif"
+          alt="MyHero"
+          style="width: 100%; height: 100%"
+        />
         <a
           href="page1.html"
           style="width: 100%; height: 100%; display: block"
