--- a/index.html
+++ b/index.html
@@ -166,7 +166,15 @@
         />
         <a
           href="page1.html"
-          style="width: 100%; height: 100%; display: block"
+          style="
+            width: 100%;
+            height: 100%;
+            display: block;
+            z-index: 3;
+            position: absolute;
+            top: 0;
+            left: 0;
+          "
         ></a>
       </div>
     </div>
