--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div id="container">
       <div id="box" style="display: none">
         <img
-          src="images/page0.gif"
+          src="images/page1.svg"
           alt="MyHero"
           style="width: 100%; height: 100%"
         />
