--- a/page6.html
+++ b/page6.html
@@ -215,6 +215,12 @@
         background-image: url(images/play_button.gif);
         background-size: contain;
       }
+      @media screen and (max-width: 600px) {
+        #play_button {
+          width: 100px;
+          height: 100px;
+        }
+      }
     </style>
   </head>
   <body>
