--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
         top: 0;
         left: 0;
         background-color: #e5e5e5;
+        z-index: 2;
+        width: 200px;
       }
     </style>
   </head>
