--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div id="container">
       <div id="box" style="display: none">
         <img
-          src="images/page2.svg"
+          src="images/page0.gif"
           alt="MyHero"
           style="width: 100%; height: 100%"
         />
@@ -189,7 +189,7 @@
       </div>
     </div>
     <script>
-      const aspectRatio = 0.75;
+      const aspectRatio = 0.801;
       const calculate = (width, height) => {
         let newHeight = height;
         let newWidth = height * aspectRatio;
