--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
     </div>
     <script>
-      const aspectRatio = 0.801;
+      const aspectRatio = 810 / 1010;
       const calculate = (width, height) => {
         let newHeight = height;
         let newWidth = height * aspectRatio;
